--- a/AirReservationSystem/ars-web/src/main/webapp/WEB-INF/web.xml
+++ b/AirReservationSystem/ars-web/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,21 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>FirstMaven</display-name>
 
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/test</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 	<servlet>
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	</servlet>
-
+<!-- if DispatcherServlet class not found occurs check deployemnt assembly - maven dependancies in ars-web build path-->
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
 </web-app>
